# spotr_backend

./: .gitignore  README.md  database.db  pyproject.toml  requirements.txt  spotr.db
app/: main.py
app/database/: session.py
app/ml/: clustering.py  data.py  features.py  recommender.py
app/models/: gym.py  spotr_user.py  user_gym.py  user_interest.py
app/routes/: gym.py  match.py  recommend.py  spotr_user.py  user_interest.py
app/schemas/: gym.py  spotr_user.py  user_gym.py  user_interest.py
