[project]
name = "spotr-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "numpy>=2.1.0",
    "pydantic[email]>=2.12.5",
    "scikit-learn>=1.5.0",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.41.0",
]
